--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.5",
+    "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
     "django-unfold>=0.64.2",
     "djangorestframework>=3.16.1",
@@ -16,6 +17,7 @@ dev = [
     "django-extensions>=4.1",
     "django-rosetta>=0.10.2",
     "django-silk>=5.4.1",
+    "drf-spectacular>=0.28.0",
     "ipython>=9.4.0",
     "mypy>=1.17.1",
     "pytest>=8.4.1",
