--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dj-rest-auth>=7.0.1",
     "django>=5.2.5",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
+    "django-filter>=25.1",
+    "django-model-utils>=5.0.0",
     "django-unfold>=0.64.2",
     "djangorestframework>=3.16.1",
+    "djangorestframework-simplejwt>=5.5.1",
+    "drf-extensions>=0.8.0",
 ]
 
 [dependency-groups]
@@ -22,4 +27,6 @@ dev = [
     "mypy>=1.17.1",
     "pytest>=8.4.1",
     "pytest-django>=4.11.1",
+    "black>=25.1.0",
+    "isort>=6.0.1",
 ]
