--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "dj-rest-auth>=7.0.1",
     "django>=5.2.5",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
@@ -14,6 +13,7 @@ dependencies = [
     "django-unfold>=0.64.2",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
+    "djoser>=2.3.3",
     "drf-extensions>=0.8.0",
 ]
 
