Dockerizing the project Add celery, celery beats config, and flower for the ui

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,14 @@ DJANGO_SETTINGS_MODULE='config.django.local'
 SECRET_KEY='not-so-secret-key'
 DJANO_DEBUG='True'
 JWT_SECRET_KEY='another-nssk'
+DEBUG=True
+DJANGO_ENV=local
+POSTGRES_DB=drf_starter
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+DATABASE_URL='postgresql://postgres:postgres@db:5432/drf_starter'
+REDIS_URL=redis://redis:6379/0
+WEB_PORT=8000
+REDIS_PORT=6379
