--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "celery>=5.5.3",
+    "dj-database-url>=3.0.1",
     "django>=5.2.5",
+    "django-celery-beat>=2.8.1",
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
     "django-filter>=25.1",
@@ -15,7 +18,10 @@ dependencies = [
     "djangorestframework-simplejwt>=5.5.1",
     "djoser>=2.3.3",
     "drf-extensions>=0.8.0",
+    "flower>=2.0.1",
     "loguru>=0.7.3",
+    "psycopg2-binary>=2.9.10",
+    "redis>=6.4.0",
 ]
 
 [dependency-groups]
