--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DJANGO_SETTINGS_MODULE='config.django.local'
-SECRET_KEY='not-so-secret-key'
-DJANO_DEBUG='True'
-JWT_SECRET_KEY='another-nssk'
+SECRET_KEY='django-insecure-+bx^nk8a*ihh9ge3c*^9twlm^ob!hl(_n%v-8zud1at$8v+2vs'
+DJANGO_DEBUG='True'
+JWT_SECRET_KEY='+yt1$5^95#*jt#0%j-d(nxz0!bpj7p01gar-4s55-5n4p#!i=_'
 DEBUG=True
 DJANGO_ENV=local
 POSTGRES_DB=drf_starter
@@ -10,6 +10,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 DATABASE_URL='postgresql://postgres:postgres@db:5432/drf_starter'
-REDIS_URL=redis://redis:6379/0
+REDIS_URL='redis://redis:6379/0'
 WEB_PORT=8000
 REDIS_PORT=6379
