--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "flower>=2.0.1",
     "loguru>=0.7.3",
     "psycopg2-binary>=2.9.10",
+    "pytest>=8.4.1",
     "redis>=6.4.0",
 ]
 
@@ -41,4 +42,5 @@ dev = [
     "pydantic>=2.11.7",
     "icecream>=2.1.7",
     "werkzeug>=3.1.3",
+    "pytest-cov>=6.2.1",
 ]
