--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:15
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-django_db}
+      POSTGRES_DB: ${POSTGRES_DB:-drf_starter}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     volumes:
@@ -57,9 +57,6 @@ services:
       EMAIL_FRONTEND_DOMAIN: ${EMAIL_FRONTEND_DOMAIN:-}
       THEME_PRIMARY_COLOR: ${THEME_PRIMARY_COLOR:-#6a0dad}
       THEME_ACCENT_COLOR: ${THEME_ACCENT_COLOR:-#4b0082}
-      POSTGRES_DB: ${POSTGRES_DB:-django_db}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_HOST: ${POSTGRES_HOST:-db}
       POSTGRES_PORT: ${POSTGRES_PORT:-5432}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
