--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "django>=5.2.5",
     "django-celery-beat>=2.8.1",
     "django-cors-headers>=4.7.0",
-    "django-environ>=0.12.0",
+
     "django-filter>=25.1",
     "django-model-utils>=5.0.0",
     "django-unfold>=0.64.2",
@@ -24,6 +24,8 @@ dependencies = [
     "flower>=2.0.1",
     "loguru>=0.7.3",
     "psycopg2-binary>=2.9.10",
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
     "pytest>=8.4.1",
     "redis>=6.4.0",
 ]
