--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,7 @@ celerybeat.pid
 .env.local
 .env.prod
 .env.test
+.env.prof
 .envrc
 .venv
 env/
@@ -218,3 +219,4 @@ resume-cursor.sh
 
 DRF-starter.code-workspace
 **/staticfiles/
+profiles/
