--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.12.15",
     "celery>=5.5.3",
     "channels>=4.3.1",
     "channels-redis>=4.3.0",
@@ -13,7 +14,6 @@ dependencies = [
     "django>=5.2.5",
     "django-celery-beat>=2.8.1",
     "django-cors-headers>=4.7.0",
-
     "django-filter>=25.1",
     "django-model-utils>=5.0.0",
     "django-unfold>=0.64.2",
@@ -26,6 +26,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pyinstrument>=4.6.2",
     "pytest>=8.4.1",
     "redis>=6.4.0",
 ]
