removing some profile hardcoded values

--- a/.env.prof.example
+++ b/.env.prof.example
@@ -47,6 +47,34 @@ THEME_ACCENT_COLOR=#4b0082
 DJANGO_ENV=prof
 DJANGO_SETTINGS_MODULE=config.django.profiling
 
-# Profiling Configuration
+# =============================================================================
+# PyInstrument Profiling Configuration
+# =============================================================================
 PROFILING_ENABLED=True
 PYINSTRUMENT_ENABLED=True
+PYINSTRUMENT_PROFILE_DIR=profiles
+PYINSTRUMENT_ALWAYS_PROFILE=True
+PYINSTRUMENT_SHOW_TOOLBAR=True
+PYINSTRUMENT_USE_SIGNAL=False
+
+# =============================================================================
+# Docker Compose Profiling Service
+# =============================================================================
+PROFILING_PORT=8101
+PROFILING_CONTAINER_NAME=web_profiling
+
+# =============================================================================
+# Profiling Management Command Defaults
+# =============================================================================
+PROFILING_CONFIG_FILE=profiling_config.json
+PROFILING_BASE_URL=http://127.0.0.1:8000
+PROFILING_CONCURRENT_REQUESTS=3
+PROFILING_REQUESTS_PER_ENDPOINT=2
+PROFILING_AUTH_EMAIL=admin@katesthe-core.com
+PROFILING_AUTH_PASSWORD=admin
+PROFILING_SERVE_PORT=8080
+PROFILING_SERVE_LIMIT=20
+PROFILING_SERVE_SORT=time
+PROFILING_ANALYZE_LIMIT=20
+PROFILING_ANALYZE_SORT=time
+PROFILING_CLEAN_DAYS=7
