working on the profile management command

--- a/.env.prof.example
+++ b/.env.prof.example
@@ -1,10 +1,10 @@
-# Profiling Environment Configuration
-# Copy this file to .env.prof and customize as needed
+# Local Development Environment Configuration
+# Copy this file to .env.local and customize as needed
 
 # Django Configuration
 DJANGO_DEBUG=True
-SECRET_KEY=your-profiling-secret-key-here-change-in-production
-JWT_SECRET_KEY=your-profiling-jwt-secret-key-here-change-in-production
+SECRET_KEY=your-local-secret-key-here-change-in-production
+JWT_SECRET_KEY=your-local-jwt-secret-key-here-change-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
 # Database Configuration (PostgreSQL)
@@ -12,40 +12,40 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_DB=drf_starter_profiling
+POSTGRES_DB=drf_starter
 
-# Direct URLs for Docker Compose
-DATABASE_URL=postgresql://postgres:postgres@db:5432/drf_starter_profiling
+# Redis Configuration
 REDIS_URL=redis://redis:6379/0
 
 # Web Server
-WEB_PORT=8101
+WEB_PORT=8000
 
 # Project Information
-PROJECT_NAME=DRF Starter Profiling
-PROJECT_DESCRIPTION=Profiling environment for DRF starter project
-PROJECT_VERSION=1.0.0-profiling
+PROJECT_NAME=Katesthe-core
+PROJECT_DESCRIPTION=A Django REST Framework starter project with ready-to-use authentication, custom user management, and modular app structure.
+PROJECT_VERSION=1.0.0
 
 # Contact Information
-CONTACT_NAME=Profiling Team
-CONTACT_EMAIL=profiling@example.com
-CONTACT_URL=https://profiling.example.com
+CONTACT_NAME=Katesthe-core Dev Team
+CONTACT_EMAIL=support@katesthe-core.com
+CONTACT_URL=https://github.com/katesthe-core
 
-# Email Configuration (Console backend for profiling)
+# Email Configuration (Local development - use MailHog or similar)
 EMAIL_HOST=localhost
 EMAIL_PORT=1025
 EMAIL_USE_TLS=False
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
-EMAIL_FRONTEND_DOMAIN=http://localhost:8101
+EMAIL_FRONTEND_DOMAIN=http://localhost:8000
 
 # Theme Colors
 THEME_PRIMARY_COLOR=#6a0dad
 THEME_ACCENT_COLOR=#4b0082
 
 # Environment
-DJANGO_ENV=prof
-DJANGO_SETTINGS_MODULE=config.django.profiling
+DJANGO_ENV=local
+DJANGO_SETTINGS_MODULE=config.django.local
+DATABASE_URL=postgresql://postgres:postgres@db:5432/drf_starter
 
 # =============================================================================
 # PyInstrument Profiling Configuration
@@ -67,7 +67,7 @@ PROFILING_CONTAINER_NAME=web_profiling
 # Profiling Management Command Defaults
 # =============================================================================
 PROFILING_CONFIG_FILE=profiling_config.json
-PROFILING_BASE_URL=http://127.0.0.1:8000
+PROFILING_BASE_URL=http://127.0.0.1:8101
 PROFILING_CONCURRENT_REQUESTS=3
 PROFILING_REQUESTS_PER_ENDPOINT=2
 PROFILING_AUTH_EMAIL=admin@katesthe-core.com
