updating example file

--- a/.env.local.example
+++ b/.env.local.example
@@ -45,3 +45,5 @@ THEME_ACCENT_COLOR=#4b0082
 # Environment
 DJANGO_ENV=local
 DJANGO_SETTINGS_MODULE=config.django.local
+DATABASE_URL=postgresql://postgres:postgres@db:5432/drf_starter
+
