update env example

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,8 +3,8 @@
 
 # Django Configuration
 DJANGO_DEBUG=True
-SECRET_KEY=your-local-secret-key-here-change-in-production
-JWT_SECRET_KEY=your-local-jwt-secret-key-here-change-in-production
+SECRET_KEY=!&c6j^rafut=16n%d^82%p)mke@n#1d^v3@*kxm@w%=si9@*iw
+JWT_SECRET_KEY=v604wu=y^uxxyi0!jjembb%v(y#ff$tq%sejf^ur$!lh*yy=x9
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
 # Database Configuration (PostgreSQL)
@@ -45,3 +45,4 @@ THEME_ACCENT_COLOR=#4b0082
 # Environment
 DJANGO_ENV=local
 DJANGO_SETTINGS_MODULE=config.django.local
+DATABASE_URL=postgresql://postgres:postgres@db:5432/drf_starter
